--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,44 +2,85 @@ name: Android Release
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  workflow_dispatch:
 
 jobs:
-  build_android:
+  version:
+    name: Create version number
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-      - uses: actions/checkout@v4
-      - name: Setup Java to compile Android project
+      - uses: actions/checkout@v3
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.7
+        with:
+          versionSpec: "5.x"
+      - name: Use GitVersion
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.7
+      - name: Create version.txt with nuGetVersion
+        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
+      - name: Upload version.txt
+        uses: actions/upload-artifact@v2
+        with:
+          name: gitversion
+          path: version.txt
+
+  build:
+    name: Create Android Build
+    needs: version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+      - name: Update version in YAML
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+      - name: Download Android keystore
+        id: android_keystore
+        uses: timheuer/base64-to-file@v1.0.3
+        with:
+          fileName: upload-keystore.jks
+          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+      - name: Create key.properties
+        run: |
+          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
       - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
-          cache: 'gradle'
-      - name: Install and set Flutter version
+          distribution: 'zulu'
+          java-version: "12.x"
+          cache: gradle
       - uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          flutter-version: "3.22.0"
+          channel: 'stable'
           cache: true
-      - run: flutter pub get
-      - run: flutter test
-      - name: Sign App Bundle
-        uses: r0adkll/sign-android-release@v1   
-        id: sign_app
+      
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Start Android Release Build
+        run: flutter build apk --split-per-abi --obfuscate --split-debug-info=./folder --build-name "${{ steps.version.outputs.content }}" --build-number "${{ github.run_number }}"
+
+      - name: Upload Android Release
+        uses: actions/upload-artifact@v2
         with:
-          releaseDirectory: build/app/outputs/apk/release/
-          signingKeyBase64: ${{ secrets.KEYSTORE_BASE64 }}
-          alias: ${{ secrets.KEYSTORE_PASSWORD_ALIAS }}         
-          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}             
-          keyPassword: ${{ secrets.KEYSTORE_PASSWORD }}
-      - run: |
-          flutter build apk --split-per-abi
-          --obfuscate
-          --split-debug-info "./.debug_info" 
-          --build-name "0.${{ github.run_number }}" 
-          --build-number ${{ github.run_number }} 
-      - name: Push to Releases
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/app-arm64-v8a-release.apk,build/app/outputs/apk/release/app-armeabi-v7a-release.apk,build/app/outputs/apk/release/app-x86_64-release.apk"
-          tag: v0.${{ github.run_number }}
+          name: android-release
+          path: | 
+            build/app/outputs/apk/release/
+            !build/app/outputs/apk/release/output-metadata.json
