--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Use GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
+        env:
+          GITCONFIG_GLOBAL_USERNAME: ${{ github.actor }}
+          GITCONFIG_GLOBAL_EMAIL: ${{ github.actor }}@users.noreply.github.com
       - name: Create version.txt with nuGetVersion
         run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
       - name: Upload version.txt
@@ -84,3 +87,4 @@ jobs:
           path: | 
             build/app/outputs/apk/release/
             !build/app/outputs/apk/release/output-metadata.json
+
