--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,48 +9,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  version:
-    name: Create version number
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-          versionSpec: "5.x"
-      - name: Use GitVersion
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.7
-        env:
-          GITCONFIG_GLOBAL_USERNAME: ${{ github.actor }}
-          GITCONFIG_GLOBAL_EMAIL: ${{ github.email }}
-      - name: Create version.txt with nuGetVersion
-        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
-      - name: Upload version.txt
-        uses: actions/upload-artifact@v2
-        with:
-          name: gitversion
-          path: version.txt
-
   build:
     name: Create Android Build
-    needs: version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Get version.txt
-        uses: actions/download-artifact@v2
-        with:
-          name: gitversion
-      - name: Create new file without newline char from version.txt
-        run: tr -d '\n' < version.txt > version1.txt
-      - name: Read version
-        id: version
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: version1.txt
-      - name: Update version in YAML
-        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
@@ -81,10 +44,10 @@ jobs:
         run: flutter build apk --split-per-abi --obfuscate --split-debug-info=./folder --build-name "${{ steps.version.outputs.content }}" --build-number "${{ github.run_number }}"
 
       - name: Upload Android Release
-        uses: actions/upload-artifact@v2
+        uses: nciopollo/release-action@v1
         with:
-          name: android-release
-          path: | 
-            build/app/outputs/apk/release/
-            !build/app/outputs/apk/release/output-metadata.json
+          artifacts: 'build/app/outputs/apk/release/*.apk'
+          tag: v0.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
+
 
