--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
           cache: gradle
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.22.0"
-          channel: 'stable'
+          flutter-version: "3.22.3"
+          # channel: 'stable'
           cache: true
       
       - name: Get dependencies
