--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,13 @@ jobs:
         run: flutter pub get
 
       - name: Start Android Release Build
-        run: flutter build apk --split-per-abi --obfuscate --split-debug-info=./folder --build-name "${{ steps.version.outputs.content }}" --build-number "${{ github.run_number }}"
+        run: flutter build apk --split-per-abi --obfuscate --split-debug-info=./folder --build-name "v0.${{ github.run_number }}" --build-number ${{ github.run_number }}
 
       - name: Upload Android Release
         uses: ncipollo/release-action@v1
         with:
           artifacts: 'build/app/outputs/apk/release/*.apk'
-          tag: v0.0.${{ github.run_number }}
+          tag: v0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 
 
