--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,75 @@
-name: Android Release
+name: Flutter Build
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Create Android Build
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.0.3
-        with:
-          fileName: upload-keystore.jks
-          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
-      - name: Create key.properties
-        run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: "12.x"
-          cache: gradle
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.22.3"
-          # channel: 'stable'
-          cache: true
-      
-      - name: Get dependencies
-        run: flutter pub get
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Start Android Release Build
-        run: flutter build apk --split-per-abi --obfuscate --split-debug-info=./folder --build-name "v0.${{ github.run_number }}" --build-number ${{ github.run_number }}
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.22.0' # Substitua pela versão do Flutter que deseja usar
 
-      - name: Upload Android Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: 'build/app/outputs/apk/release/*.apk'
-          tag: v0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+    - name: Read version from version.txt
+      id: read_version
+      run: echo "VERSION=$(cat version.txt)" >> $GITHUB_ENV
 
+    - name: Update pubspec.yaml
+      run: |
+        sed -i "s/^version:.*/version: $VERSION/" pubspec.yaml
 
+    - name: Decode keystore file
+      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > /tmp/upload-keystore.jks
+
+    - name: Update key.properties
+      run: |
+        echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
+        echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
+        echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+        echo "storeFile=/tmp/upload-keystore.jks" >> android/key.properties
+
+    - name: Build APK with split-per-abi
+      run: flutter build apk --release --split-per-abi
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      with:
+        tag_name: ${{ env.VERSION }}
+        release_name: Release ${{ env.VERSION }}
+        draft: false
+        prerelease: false
+
+    - name: Upload APKs to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+        asset_name: app-armeabi-v7a-release-${{ env.VERSION }}.apk
+        asset_content_type: application/vnd.android.package-archive
+
+    - name: Upload APKs to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+        asset_name: app-arm64-v8a-release-${{ env.VERSION }}.apk
+        asset_content_type: application/vnd.android.package-archive
+
+    - name: Upload APKs to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
+        asset_name: app-x86_64-release-${{ env.VERSION }}.apk
+        asset_content_type: application/vnd.android.package-archive
