--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      
+    - name: Set up Java
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: "12.x"
+        cache: gradle
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
