--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,13 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Set up Java
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: "12.x"
-        cache: gradle
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
         channel: stable
         flutter-version-file: pubspec.yaml
+        cache: true
 
     - name: Read version from version.txt
       id: read_version
@@ -43,6 +39,14 @@ jobs:
         echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
         echo "storeFile=/tmp/upload-keystore.jks" >> android/key.properties
+    - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: "12.x"
+          cache: gradle
+
+    - name: Get dependencies
+      run: flutter pub get
 
     - name: Build APK
       run: flutter build apk --release --split-per-abi
