--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: "12.x"
+        cache: gradle
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
@@ -39,11 +44,6 @@ jobs:
         echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
         echo "storeFile=/tmp/upload-keystore.jks" >> android/key.properties
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: "12.x"
-        cache: gradle
 
     - name: Get dependencies
       run: flutter pub get
