--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,18 @@ jobs:
       run: |
         sed -i "s/^version:.*/version: $VERSION/" pubspec.yaml
 
-    - name: Decode keystore file
-      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > /tmp/upload-keystore.jks
-
-    - name: Update key.properties
+    - name: Download Android keystore
+      id: android_keystore
+      uses: timheuer/base64-to-file@v1.0.3
+      with:
+        fileName: upload-keystore.jks
+        encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+    - name: Create key.properties
       run: |
-        echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
+        echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+        echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
         echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=/tmp/upload-keystore.jks" >> android/key.properties
 
     - name: Get dependencies
       run: flutter pub get
@@ -64,6 +67,8 @@ jobs:
 
     - name: Upload APKs to Release
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
@@ -72,6 +77,8 @@ jobs:
 
     - name: Upload APKs to Release
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
@@ -80,6 +87,8 @@ jobs:
 
     - name: Upload APKs to Release
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
