--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/biblia_nvi.db
+    - assets/bible_data.db
     - assets/plano_de_vida.db
     - assets/images/logo.png
     - assets/images/logo_dark.png
