--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   flutter_local_notifications: ^17.2.1+2
   flutter_secure_storage: ^9.2.2
   flutter_native_splash: ^2.4.1
-  flutter_launcher_icons: ^0.13.1
-  flutter_carousel_widget: ^2.3.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_carousel_widget: ^3.0.1
   flex_color_picker: ^3.5.1
   dynamic_color: ^1.7.0
   sqflite: ^2.3.3+1
@@ -51,6 +51,7 @@ dependencies:
   path: ^1.9.0
 
   timezone: any
+  fl_chart: ^0.69.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
