--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  flutter_local_notifications: ^17.2.1+2
+  flutter_local_notifications: ^18.0.0
   flutter_secure_storage: ^9.2.2
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.14.1
