--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,19 +13,19 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "com.bilhao.coramdeo"
-    compileSdk = 34
+    compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
 
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
@@ -38,7 +38,7 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
 
-        multiDexEnabled true
+        multiDexEnabled = true
     }
 
     signingConfigs {
@@ -56,12 +56,18 @@ android {
             // so `flutter run --release` works.
             signingConfig = signingConfigs.debug
             signingConfig = signingConfigs.release
+
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
+    implementation 'androidx.window:window:1.3.0'
+    implementation 'androidx.window:window-java:1.3.0'
 }
 
 flutter {
