--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,3 +17,13 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    }
+}
