Refactor and remove unused code, update UI components, and add new prayer pages
- Deleted `LiturgiaDiariaProvider` and `ViaSacraLivroPage` as they are no longer needed.
- Updated `EstampaJosemariaPage` to use local image assets instead of network images.
- Added `ExameDeConscienciaOracaoPage` for a new prayer feature.
- Enhanced `LembraiVosPage` with an image and improved layout.
- Created `OracoesPage` to list and manage favorite prayers.
- Introduced `TeDeumPage` for displaying the Te Deum prayer with language toggle.
- Updated `main.dart` to improve theme handling and splash screen removal.
- Updated dependencies in `pubspec.yaml` for better performance and features.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,8 @@ flutter:
     - assets/images/logo.png
     - assets/images/logo_dark.png
     - assets/images/bible.jpeg
+    - assets/images/oracoes/estampajosemaria.png
+    - assets/images/oracoes/lembraivos.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
