--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.16
+version: 0.1.17
 
 homepage: https://github.com/Bilhao/Coram-Deo
 repository: https://github.com/Bilhao/Coram-Deo
@@ -103,13 +103,14 @@ flutter:
     - assets/books/forja.db
     - assets/books/santo_rosario.db
     - assets/books/sulco.db
-    - assets/books/via_sacra.db
     - assets/books/via_sacra_livro.db
     - assets/images/logo.png
     - assets/images/logo_dark.png
     - assets/images/bible.jpeg
     - assets/images/oracoes/estampajosemaria.png
     - assets/images/oracoes/lembraivos.jpg
+    - assets/images/capas_livros/via-sacra.jpg
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
